# radynstruct

./: .gitignore  README.md  docker-compose.yml  example.env
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/api/: reports.py
backend/app/core/: config.py
backend/app/services/: ai_service.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/upload/: UploadForm.tsx
